FIX: Облака на скролле обрезались overflow: hidden

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -214,7 +214,6 @@ section.main__section
     display: flex;
     align-items: center;
     position: relative;
-    overflow: hidden;
 
     .slider__wrapper
     {
@@ -372,17 +371,31 @@ section.main__section
             width: 50%;
             display: flex;
             flex-direction: column;
+
+            .bold
+            {
+                font-weight: 600;
+            }
         }
     }
 
-    .bg__video
+    .bg__wrapper
     {
         position: absolute;
         left: 0;
         top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        z-index: -5;
+    }
+
+    .bg__video
+    {
+        
         min-width: 100%;
         min-height: 100%;
-        z-index: -1;
+        
     }
 }
 
@@ -397,7 +410,7 @@ section.main__section:after
     -webkit-transform: translateY(60%);
     -ms-transform: translateY(60%);
     transform: translateY(60%);
-    z-index: 1;
+    z-index: -1;
 }
 
 .btn
